# libmfile

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README.root  TODO  build.bat  build.sh  callindir.c  configure.ac  converters.c  converters.h  disk_access.h  getputint.c  lc_c1.h  lc_c2.c  lc_getput.c  lc_minfo.c  lc_minfo.h  license.md  mat_types.c  mate_getput.c  mate_getput.h  mate_minfo.c  mate_minfo.h  mopen.c  oldmat_getput.h  oldmat_minfo.h  readme.md  shm_getput.h  shm_minfo.c  specio.c  specio.c.old  trixi_getput.h  trixi_minfo.h  txt_getput.c  txt_minfo.c  txt_minfo.h
RCS/: Makefile,v  callindir.h,v  converters.h,v  disk_access.c,v  getputint.h,v  lc_c2.c,v  lc_getput.c,v  lc_minfo.c,v  mat_types.c,v  mate_getput.c,v  mate_minfo.c,v  mfile.3ikp,v  mfile.h,v  mopen.h,v  oldmat_getput.c,v  oldmat_getput.h,v  shm_getput.c,v  trixi_minfo.h,v  txt_getput.h,v
man/: Makefile.am  mfile.3ikp
perlmfile/: MakeSwig  Makefile.PL  Makefile.old  README  bs_peaksearch.c  bs_visus_lib.c  bs_visus_lib.h  bs_visus_lib.man  bsvis.c  ge0.0024  ge0.0025  ge9.spec  mfile.i  mfile_wrap.c  mfile_wrap.doc  test.pl
spec-samples/: Makefile
spec-samples/RCS/: callindir.c,v  converters.c,v  disk_access.h,v  endian.h,v  getputint.c,v  lc_c1.c,v  lc_c1.h,v  lc_c2.h,v  lc_getput.h,v  lc_minfo.h,v  maccess.c,v  maccess.h,v  mat_types.h,v  mate_getput.h,v  mate_minfo.h,v  minfo.c,v  mopen.c,v  oldmat_minfo.c,v  oldmat_minfo.h,v  shm_access.c,v  shm_access.h,v  shm_getput.h,v  shm_minfo.c,v  shm_minfo.h,v  specio.c,v  trixi_getput.c,v  trixi_getput.h,v  trixi_minfo.c,v  txt_getput.c,v  txt_minfo.c,v  txt_minfo.h,v
src/: Makefile.am  Makefile.orig  callindir.c  callindir.h  converters.c  converters.h  debug.h  disk_access.c  disk_access.h  endian.h  getputint.c  getputint.h  gf2_getput.c  gf2_getput.h  gf2_minfo.c  gf2_minfo.h  lc_c1.c  lc_c1.h  lc_c2.c  lc_c2.h  lc_getput.c  lc_getput.h  lc_minfo.c  lc_minfo.h  maccess.c  maccess.h  mat_types.c  mat_types.h  mate_getput.c  mate_getput.h  mate_minfo.c  mate_minfo.h  mfile.h  minfo.c  mopen.c  mopen.h  oldmat_getput.c  oldmat_getput.h  oldmat_minfo.c  oldmat_minfo.h  (+17 more)
test/: CMakeLists.txt  Makefile.am  check_mfile.c  check_spectra.sh
